page-components/youbike/stop-info/section2-result.module.scss
@use '../../../styles/vars' as var;

.container{
    user-select: none;
}

.table{
    width: 100%;
    height: fit-content;
    font-weight: 300;
}


// border
.thead{
    th {
    box-shadow: -1px 0px 0px var.$YOUBIKE_LIGHT_GREEN,
    1px 0px 0px var.$YOUBIKE_LIGHT_GREEN;
    }
    th:first-child{
        border-radius: 20px 0px 0px 0px ;
    }
    th:last-child{
        border-radius: 0px 20px 0px 0px ;
    }
    @media screen and (max-width: var.$BREAKPOINT_1) {
        th:nth-child(3){
            border-radius: 0px 20px 0px 0px ;
        }
    }
}
.tbody{
    border-radius:  0 0 20px 20px;
    overflow: hidden;
    box-shadow: 1px 0px 0px  var.$YOUBIKE_DARK_GRAY,
    -1px 0px 0px  var.$YOUBIKE_DARK_GRAY,
    0px 1px 0px  var.$YOUBIKE_DARK_GRAY;

    tr:last-child td:first-child{
        border-radius: 0px 0px 0px 20px;

    }
    tr:last-child td:last-child{
        border-radius: 0px 0px 20px 0px;

    }
    @media screen and (max-width: var.$BREAKPOINT_1){
        tr:last-child td:nth-child(3){
            border-radius: 0px 0px 20px 0px,; 
        }
    }
}



// width , paddings, others
.thead th{
    background-color: var.$YOUBIKE_LIGHT_GREEN;
    color: white;
    padding: 18px;
    font-weight: 400;
    transition: background-color 0.3s ease;

     &:not(:first-child){
        cursor: pointer;
        &:hover{
            background-color: var.$YOUBIKE_DARK_GREEN;
        }
    }

    &:first-child{
        width: 15%;
    }

    &:nth-child(2) {
        width:15%;
    }

     &:nth-child(4) , &:nth-child(5){
        width: 18%;
    }

    @media screen and (max-width: var.$BREAKPOINT_1) {
        &:nth-child(4) , &:nth-child(5){
            display: none;
         }
    }

    @media screen and (max-width: var.$BREAKPOINT_2) {
        &:first-child{
            width: 70px;
        }

        &:nth-child(2) {
            width:70px;
        }
    }
}

.tbody{
    position:relative;


    &::after{
        position: absolute;

        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 3rem;
        font-weight: 600;
        bottom:0%;
        left: 0%;
        width: 100%;
        height:100%;
        opacity: 0;
        transition:  background-color 0.2s ease, color 0.2s ease;
        color:rgba(255, 255, 255, 0);
    }


    &.isFiltering::after{
        content:'更新中......';
        opacity: 1;   
        color:var.$YOUBIKE_DARK_GREEN;
        background-color: rgba(255, 255, 255, 0.9);
    }

    &.isEmpty::after{
        content:'查無資料。';
        opacity: 1;   
        color:var.$YOUBIKE_DARK_GREEN;
        background-color: rgba(255, 255, 255, 0.9);
    }

    &.isFetching::after{
        content:'資料抓取中......';
        opacity: 1;   
        color:var.$YOUBIKE_DARK_GREEN;
        background-color: rgba(255, 255, 255, 0.9);
    }




    tr:nth-child(even){
        background-color: var.$YOUBIKE_LIGHT_GRAY;
    }

    tr{
        height: 80px;
        user-select: text;
    }
    td:not(:nth-child(3)){
        text-align: center;
    }
    td:nth-child(3){
        padding-left: 80px;
    }

    td:nth-child(4), td:nth-child(5){
        color: var.$YOUBIKE_LIGHT_GREEN;
        font-weight: 600;
        font-size: 1.1rem;

    } 

    @media screen and (max-width: var.$BREAKPOINT_1){
        td:nth-child(3){
            padding-left: 150px;
        }
        td:nth-child(4), td:nth-child(5){
            display: none;
        }
    }

    @media screen and (max-width: var.$BREAKPOINT_2) {
        td:nth-child(3){
            padding-left: 30px;
        }

    }

}

